tests/rosetta/transpiler/Scala/cholesky-decomposition-1.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:56: error: type mismatch;
 found   : Any
 required: scala.math.BigInt
      while (r < n) {
                 ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:60: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
          row = row :+ (ele.asInstanceOf[ArrayBuffer[Any]](idx)).toString.toDouble
                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:64: error: type mismatch;
 found   : Any
 required: scala.math.BigInt
        while (c < n) {
                   ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:72: error: type mismatch;
 found   : Any
 required: scala.math.BigInt
      while (r < n) {
                 ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:74: error: type mismatch;
 found   : Any
 required: scala.math.BigInt
        while (c < n) {
                   ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:107: error: type mismatch;
 found   : Any
 required: scala.math.BigInt
      while (r < n) {
                 ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:111: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
          row = row :+ (ele.asInstanceOf[ArrayBuffer[Any]](idx)).toString.toDouble
                                                           ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:115: error: type mismatch;
 found   : Any
 required: scala.math.BigInt
        while (c < n) {
                   ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:139: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
        val e = ae.asInstanceOf[ArrayBuffer[Any]](i)
                                                  ^
/workspace/mochi/tests/rosetta/transpiler/Scala/cholesky-decomposition-1.scala:172: error: type mismatch;
 found   : Double(5.0)
 required: scala.math.BigInt
    demo(makeSym(BigInt(3), ArrayBuffer(25.0, 15.0, 18.0, BigInt(0) - 5.0, 0.0, 11.0)))
                                                                      ^
10 errors found
